<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_f9r</name>
  <version>0.0.1</version>
  <description>ROS2 driver for the ublox f9r</description>
  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ublox_serialization</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ntrip_client</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
